--- a/index.html
+++ b/index.html
@@ -160,3 +160,30 @@
 
 </body>
 </html>
+<div class="city-map">
+    
+    <div class="building-card building-bank" onclick="openBusiness('bank')">
+        <h3>🏦 Banco</h3>
+        <p>Generación segura de TON</p>
+        <div class="income-badge">+0.0002 TON/h</div>
+    </div>
+
+    <div class="building-card building-shop" onclick="openBusiness('shop')">
+        <h3>🛒 Tienda</h3>
+        <p>Ventas y suministros</p>
+        <div class="income-badge">+0.0001 TON/h</div>
+    </div>
+
+    <div class="building-card building-casino" onclick="openBusiness('casino')">
+        <h3>🎰 Casino</h3>
+        <p>Entretenimiento y suerte</p>
+        <div class="income-badge">+0.0005 TON/h</div>
+    </div>
+
+    <div class="building-card building-pool" style="background: linear-gradient(135deg, #0ea5e9 0%, #2563eb 100%); border: 2px solid #7dd3fc;" onclick="openBusiness('pool')">
+        <h3>🏊 Piscina</h3>
+        <p>Turismo y relax</p>
+        <div class="income-badge">+0.00005 TON/h</div>
+    </div>
+
+</div>
